@@ -142,6 +142,16 @@ public class P4Test extends TestCase {
 
         assertEquals("p4 -s changes -s submitted foo@2004/12/30:00:00:00,@2004/12/30:00:00:00", cmd.toString());
     }
+    
+    public void testBuildInfoCommand() {
+        P4 p4 = new P4();
+        Commandline command = p4.buildInfoCommand();
+        assertEquals("p4 info", command.toString());
+        
+        p4.setPort("1234");
+        command = p4.buildInfoCommand();
+        assertEquals("p4 -p 1234 info", command.toString());
+    }
 
     private InputStream loadTestLog(String name) {
         InputStream testStream = getClass().getResourceAsStream(name);
